# stream-bit

./: .env.example  .gitignore  README.md  app.py  example_payload.json  pyproject.toml  requirements.txt
docs/: API_DOCUMENTATION.md
src/: __init__.py
src/controllers/: __init__.py  streaming_controller.py
src/controllers/web/: __init__.py  api_controller.py
src/models/: config.py
src/services/: __init__.py
src/services/analytics/: __init__.py  athena_engine.py
src/services/extractors/: __init__.py  bitcoin_extractor.py
src/services/loaders/: __init__.py  firehose_loader.py
src/services/web/: __init__.py  athena_service.py  cache_service.py
src/views/web/: __init__.py
src/views/web/static/css/: dashboard.css
src/views/web/static/js/: dashboard.js  dashboard_clean.js  dashboard_new.js  dashboard_old.js  status.js
src/views/web/templates/: base.html  config.html  dashboard.html  error.html  status.html
